--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_index">IndexActivity</string>
 
     <string name="nav_home">Home</string>
+    <string name="nav_workout">Allenamenti</string>
     <string name="nav_settings">Impostazioni</string>
 
     <string name="openDrawer">open_drawer</string>
